gtk3: Avoid tooltip's invisible text color with change_color.sh

--- a/src/_sass/gtk/_common-3.18.scss
+++ b/src/_sass/gtk/_common-3.18.scss
@@ -2057,7 +2057,7 @@ GtkInfoBar {
   }
 
   // @extend %osd;
-  color: $inverse_fg_color;
+  color: $tooltip_fg_color;
   padding: 4px; /* not working */
   border-radius: 2px;
   box-shadow: none; // otherwise it gets inherited by windowframe.csd
