--- a/src/_sass/gtk/_common-3.20.scss
+++ b/src/_sass/gtk/_common-3.20.scss
@@ -3154,7 +3154,7 @@ tooltip {
     // see https://bugzilla.gnome.org/show_bug.cgi?id=736155 for details.
     // box-shadow: inset 0 1px $highlight_color;
     background-color: rgba($tooltip_bg_color, $higher_opacity);
-    color: $inverse_fg_color;
+    color: $tooltip_fg_color;
   }
 
   // @extend %osd;
